--- a/style.css
+++ b/style.css
@@ -16,18 +16,9 @@ h1 {
  margin-top: 3em;
  margin-bottom: 5em;
 }
-h2 {
- counter-increment: section;
-}
-h2:before {
- content: "§"counter(section)" ";
-}
-h2.nonum:before {
- content: "";
-}
 h3 {
- font-size: 100%;
- margin: 1em 0 0 0;
+ font-size: 110%;
+ margin: 1em 0 .3em 0;
 }
 section {
  box-sizing: border-box;
@@ -53,6 +44,10 @@ aside {
   font-size: 10.5pt;
   margin: 2em 0;
   padding: 2em 1em;
+ }
+ ol, ul {
+  margin-left: .5em;
+  padding-left: 0;
  }
  .score {
   transform-origin: left top;
@@ -117,6 +112,10 @@ table.fig th:not(:first-child){
 tr.u td,
 tr.u th {
  border-bottom: 1px solid #333;
+}
+nav#table-of-contents li.H3 {
+ font-size: 85%;
+ margin-left: 1em;
 }
 nav#header {
  width: 100%;
