--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
  --width: 960px;
 }
 html {
- font: var(--weight) 12pt/1.8 var(--family);
+ font: var(--weight) 12pt/1.9 var(--family);
  color: #333;
 }
 body {
@@ -158,4 +158,14 @@ input.ans + div {
 }
 input.ans:checked + div {
  display: block;
+}
+footer {
+ margin: 4em 0;
+ text-align: center;
+}
+footer .copyright {
+ color: #999;
+}
+footer .copyright a[href]{
+ color: inherit;
 }
